fixed h2 not being aligned to center correctly

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ input {
 h2 {
 	font-family: Arial, Helvetica, sans-serif;
 	text-align: center;
-	width: calc(100% - 40px);
+	width: 100%;
 }
 
 p {
